2005-08-29  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (EXTRA_DIST): Add coverage.
	[GCOV]: Generate coverage summary after the tests ran
	* coverage.sh: New file.

2005-08-28  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.an [BUILD_STATIC] (libdw): Add -ldl.
	(CLEANFILES): Add *.gcno *.gcda *.gconv.

2005-08-28  Ulrich Drepper  <drepper@redhat.com>

	* run-strings-test.sh: New file.
	* Makefile.am (TESTS, EXTRA_DIST): Add it.

2005-08-27  Roland McGrath  <roland@redhat.com>

	* addrscopes.c (handle_address): Apply bias to PC addresses.

	* run-funcscopes.sh: New file.
	* testfile25.bz2: New data file.
	* Makefile.am (TESTS, EXTRA_DIST): Add them.

2005-08-26  Roland McGrath  <roland@redhat.com>

	* addrscopes.c (dwarf_diename_integrate): Removed.
	(print_vars, handle_address): Use plain dwarf_diename.

2005-08-25  Roland McGrath  <roland@redhat.com>

	* funcscopes.c: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(funcscopes_LDADD): New variable.

	* run-addrscopes.sh: Add another case.
	* testfile24.bz2: New data file.
	* Makefile.am (EXTRA_DIST): Add it.

	* addrscopes.c (handle_address): Take new argument IGNORE_INLINES,
	pass it to dwarf_getscopes.
	(main): Pass it, true when '=' follows an address.

2005-08-24  Roland McGrath  <roland@redhat.com>

	* line2addr.c (print_address): Omit () for DSOs.

2005-08-24  Ulrich Drepper  <drepper@redhat.com>

	* run-line2addr.sh: Remove testfile23 in the end.

	* Makefile.am [BUILD_STATIC] (libdw): Add $(libelf) and $(libebl).
	[MUDFLAP] (AM_LDFLAGS): Define to find libebl modules.

2005-08-22  Roland McGrath  <roland@redhat.com>

	* run-line2addr.sh: Add a case.
	* testfile23.bz2: New data file.
	* Makefile.am (EXTRA_DIST): Add it.

2005-08-18  Roland McGrath  <roland@redhat.com>

	* run-addrscopes.sh: New file.
	* testfile22.bz2: New data file.
	* Makefile.am (TESTS, EXTRA_DIST): Add them.

	* addrscopes.c: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(addrscopes_LDADD): New variable.
